@@ -31,6 +31,12 @@
 <!-------------------Put how to run on local here------------------->
 <div>
     <h2>🛠️ How to build on local</h2>
+    <p>
+    <a href="https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_windows-x64_bin-sdk.zip">Download JavaFX SDK 21.0.2</a>
+    </p>
+    <p>
+    Virtual Machine Options: <code>--module-path "path/to/javafx-sdk-21.0.2/lib" --add-modules javafx.controls,javafx.fxml</code>
+    </p>
 </div>
 
 <!-------------------Put develop notes here------------------->
